--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div class="col-lg-2 col-md-4 col-6">
             <b><svg width="1em" height="1.0625em" viewBox="0 0 16 17" class="bi bi-cup-straw" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M13.964 1.18a.5.5 0 0 1-.278.65l-2.255.902-.462 2.08c.375.096.714.216.971.368.228.135.56.396.56.82 0 .046-.004.09-.011.132l-.955 9.068a1.28 1.28 0 0 1-.524.93c-.488.34-1.494.87-3.01.87-1.516 0-2.522-.53-3.01-.87a1.28 1.28 0 0 1-.524-.93L3.51 6.132A.78.78 0 0 1 3.5 6c0-.424.332-.685.56-.82.262-.154.607-.276.99-.372C5.824 4.614 6.867 4.5 8 4.5c.712 0 1.389.045 1.985.127l.527-2.37a.5.5 0 0 1 .302-.355l2.5-1a.5.5 0 0 1 .65.279zM9.768 5.608A13.991 13.991 0 0 0 8 5.5c-1.076 0-2.033.11-2.707.278A3.284 3.284 0 0 0 4.645 6c.146.073.362.15.648.222C5.967 6.39 6.924 6.5 8 6.5c.571 0 1.109-.03 1.588-.085l.18-.808zm.292 1.756a5.513 5.513 0 0 0 1.325-.297l-.845 8.03c-.013.12-.06.185-.102.214-.357.249-1.167.69-2.438.69-1.27 0-2.08-.441-2.438-.69-.041-.029-.09-.094-.102-.214l-.845-8.03c.137.046.283.088.435.126.774.194 1.817.308 2.95.308.742 0 1.445-.049 2.06-.137zm-5.593-1.48s.003.002.005.006l-.005-.006zm7.066 0l-.005.006a.026.026 0 0 1 .005-.006zM11.354 6a3.282 3.282 0 0 1-.703.235l.1-.446c.264.069.464.142.603.211z"/>
-            </svg> SHOW - OFF BAR </b>
+            </svg> SHOW - OFF </b>
            </div>
 
           <div class="col-lg-2 col-md-4 col-6">
@@ -135,7 +135,7 @@
             <b> <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-droplet-half" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M7.21.8C7.69.295 8 0 8 0c.109.363.234.708.371 1.038.812 1.946 2.073 3.35 3.197 4.6C12.878 7.096 14 8.345 14 10a6 6 0 0 1-12 0C2 6.668 5.58 2.517 7.21.8zm.413 1.021A31.25 31.25 0 0 0 5.794 3.99c-.726.95-1.436 2.008-1.96 3.07C3.304 8.133 3 9.138 3 10c0 0 2.5 1.5 5 .5s5-.5 5-.5c0-1.201-.796-2.157-2.181-3.7l-.03-.032C9.75 5.11 8.5 3.72 7.623 1.82z"/>
               <path fill-rule="evenodd" d="M4.553 7.776c.82-1.641 1.717-2.753 2.093-3.13l.708.708c-.29.29-1.128 1.311-1.907 2.87l-.894-.448z"/>
-            </svg> CROSS WASHING </b>  </div>
+            </svg> CROSS WASHI </b>  </div>
 
           <div class="col-lg-2 col-md-4 col-6">
           <b><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-richtext" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -192,7 +192,7 @@
                   <div class="count-box">
                     <i class="icofont-girl"></i>
                     <span data-toggle="counter-up">75</span>
-                    <p><strong>Happy Women</strong> chooses Queen's Town for their stay and still counting.</p>
+                    <p><strong>Happy Women </strong> chooses Queen's Town for their stay and still counting.</p>
                   </div>
                 </div>
 
@@ -200,7 +200,7 @@
                   <div class="count-box">
                     <i class="icofont-ui-timer"></i>
                     <span data-toggle="counter-up">4680 </span> 
-                    <p><strong>Hours</strong> Services & support has been provided by Queen's Town.</p>
+                    <p><strong>Hours </strong> Services & support has been provided by Queen's Town.</p>
                   </div>
                 </div>
 
@@ -208,7 +208,7 @@
                   <div class="count-box">
                     <i class="icofont-unique-idea"></i>
                     <span data-toggle="counter-up">04</span>
-                    <p><strong>Years of experience</strong> will help us to Get closer than ever to our clients.</p>
+                    <p><strong>Years of experience </strong> will help us to Get closer than ever to our clients.</p>
                   </div>
                 </div>
 
@@ -216,7 +216,7 @@
                   <div class="count-box">
                     <i class="icofont-flame-torch"></i>
                     <span data-toggle="counter-up">15</span>
-                    <p><strong>Amenities</strong> and more provided by Queen's Town for your comfort.</p>
+                    <p><strong>Amenities </strong> and more provided by Queen's Town for your comfort.</p>
                   </div>
                 </div>
               </div>
@@ -928,7 +928,7 @@
 
           <div class="col-lg-5 col-md-12" data-aos="fade-up" data-aos-delay="300">
            
-              <form method="POST" data-netlify="true">
+              <form name="contact" method="POST" data-netlify="true">
                <div class="form-row">
                  <div class="col-md-12 form-group">
                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
