--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <b> <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-droplet-half" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M7.21.8C7.69.295 8 0 8 0c.109.363.234.708.371 1.038.812 1.946 2.073 3.35 3.197 4.6C12.878 7.096 14 8.345 14 10a6 6 0 0 1-12 0C2 6.668 5.58 2.517 7.21.8zm.413 1.021A31.25 31.25 0 0 0 5.794 3.99c-.726.95-1.436 2.008-1.96 3.07C3.304 8.133 3 9.138 3 10c0 0 2.5 1.5 5 .5s5-.5 5-.5c0-1.201-.796-2.157-2.181-3.7l-.03-.032C9.75 5.11 8.5 3.72 7.623 1.82z"/>
               <path fill-rule="evenodd" d="M4.553 7.776c.82-1.641 1.717-2.753 2.093-3.13l.708.708c-.29.29-1.128 1.311-1.907 2.87l-.894-.448z"/>
-            </svg> CROSS WASHI </b>  </div>
+            </svg> CROSS WASH </b>  </div>
 
           <div class="col-lg-2 col-md-4 col-6">
           <b><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-richtext" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -192,7 +192,7 @@
                   <div class="count-box">
                     <i class="icofont-girl"></i>
                     <span data-toggle="counter-up">75</span>
-                    <p><strong>Happy Women </strong> chooses Queen's Town for their stay and still counting.</p>
+                    <p><strong>Happy Women </strong>  chooses Queen's Town for their stay and still counting.</p>
                   </div>
                 </div>
 
@@ -200,7 +200,7 @@
                   <div class="count-box">
                     <i class="icofont-ui-timer"></i>
                     <span data-toggle="counter-up">4680 </span> 
-                    <p><strong>Hours </strong> Services & support has been provided by Queen's Town.</p>
+                    <p><strong>Hours </strong>  Services & support has been provided by Queen's Town.</p>
                   </div>
                 </div>
 
@@ -208,7 +208,7 @@
                   <div class="count-box">
                     <i class="icofont-unique-idea"></i>
                     <span data-toggle="counter-up">04</span>
-                    <p><strong>Years of experience </strong> will help us to Get closer than ever to our clients.</p>
+                    <p><strong>Years of experience </strong>  will help us to Get closer than ever to our clients.</p>
                   </div>
                 </div>
 
@@ -216,7 +216,7 @@
                   <div class="count-box">
                     <i class="icofont-flame-torch"></i>
                     <span data-toggle="counter-up">15</span>
-                    <p><strong>Amenities </strong> and more provided by Queen's Town for your comfort.</p>
+                    <p><strong>Amenities </strong>  and more provided by Queen's Town for your comfort.</p>
                   </div>
                 </div>
               </div>
@@ -931,16 +931,16 @@
               <form name="contact" method="POST" data-netlify="true">
                <div class="form-row">
                  <div class="col-md-12 form-group">
-                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" required />
                    <div class="validate"></div>
                  </div> <br>
                  <div class="col-md-12 form-group">
-                   <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                   <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email"  required />
                    <div class="validate"></div>
                  </div><br>
                </div>
                <div class="form-group">
-                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" required />
                  <div class="validate"></div>
                </div><br>
                <div class="form-group">
