--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                   <div class="count-box">
                     <i class="icofont-girl"></i>
                     <span data-toggle="counter-up">75</span>
-                    <p><strong>Happy Women </strong>  chooses Queen's Town for their stay and still counting.</p>
+                    <p><strong>Happy Women </strong><br>chooses Queen's Town for their stay and still counting.</p>
                   </div>
                 </div>
 
@@ -200,7 +200,7 @@
                   <div class="count-box">
                     <i class="icofont-ui-timer"></i>
                     <span data-toggle="counter-up">4680 </span> 
-                    <p><strong>Hours </strong>  Services & support has been provided by Queen's Town.</p>
+                    <p><strong>Hours </strong><br>Services & support has been provided by Queen's Town.</p>
                   </div>
                 </div>
 
@@ -208,7 +208,7 @@
                   <div class="count-box">
                     <i class="icofont-unique-idea"></i>
                     <span data-toggle="counter-up">04</span>
-                    <p><strong>Years of experience </strong>  will help us to Get closer than ever to our clients.</p>
+                    <p><strong>Years of experience </strong><br>will help us to Get closer than ever to our clients.</p>
                   </div>
                 </div>
 
@@ -216,7 +216,7 @@
                   <div class="count-box">
                     <i class="icofont-flame-torch"></i>
                     <span data-toggle="counter-up">15</span>
-                    <p><strong>Amenities </strong>  and more provided by Queen's Town for your comfort.</p>
+                    <p><strong>Amenities </strong><br>and more provided by Queen's Town for your comfort.</p>
                   </div>
                 </div>
               </div>
