--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
 
               <div>
                 <i class="ri-mail-send-line"></i>
-                <p>help.queenstown@gmail.com</p>
+                <p>support@thequeenstown.in</p>
               </div>
 
               <div>
