--- a/career.html
+++ b/career.html
@@ -94,7 +94,7 @@
           <div class="col-lg-12" data-aos="fade-down" data-aos-delay="10">
          <h3>If you want to be a part of Queen's Town family, where motivation builds the confidence to grow and work hard. </h3>
        <hr>   <h4>PLEASE DROP YOUR CV AT </h4>  <br>
-        <h2>  <strong>help.queenstown@gmail.com</strong> </h2>
+        <h2>  <strong>support@thequeenstown.in</strong> </h2>
           </div>
 
         </div>
